# skylarkdb

./: .env.example  .gitignore  CHANGELOG.md  DIALOG_OPTIMIZATION_SUMMARY.md  EXPORT_GUIDE.md  GITHUB_ACTIONS_SETUP.md  README.md  latest.json  package-lock.json  package.json
.codeflicker/preview/: start.md
.github/workflows/: ci.yml  release.yml  rust.yml  test.yml
.qwen/: settings.json  settings.json.orig
.workbuddy/memory/: 2026-04-13.md
.workbuddy/plans/: ui-header-optimization_b1502f48.md
docs/: RELEASE_WORKFLOW.md
skylarkdb/: .eslintrc.cjs  .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
skylarkdb/.github/workflows/: release.yml
skylarkdb/src/: App.tsx  index.css  main.tsx
skylarkdb/src-tauri/: Cargo.toml  _kombu.binding.celery.json  celery.json  tauri.conf.json
skylarkdb/src-tauri/capabilities/: default.json
skylarkdb/src-tauri/icons/: icon.icns
skylarkdb/src-tauri/sakila/: sakila-data.sql  sakila-schema.sql
skylarkdb/src-tauri/src/: main.rs  secrets.rs
skylarkdb/src-tauri/src/commands/: mod.rs  mysql.rs  redis.rs  secrets.rs
skylarkdb/src-tauri/src/database/: export.rs  import.rs  mod.rs  mysql.rs  redis.rs  sakila.rs
skylarkdb/src-tauri/src/models/: mod.rs
skylarkdb/src/components/: AddColumnDialog.tsx  AddKeyDialog.tsx  ConnectionForm.tsx  ConnectionItem.tsx  ConnectionList.tsx  CreateDatabaseDialog.tsx  CreateTableDialog.tsx  DataEditForm.tsx  DatabaseSelector.tsx  DeleteTableDialog.tsx  EditKeyDialog.tsx  ImportDataDialog.tsx  ImportExportModal.tsx  ImportRedisDataDialog.tsx  MySQLExplorer.tsx  RedisExplorer.tsx  SettingsDialog.tsx  SqlEditor.tsx  SqlQueryPanel.tsx  TitleBar.tsx  UpdateChecker.tsx
skylarkdb/src/components/ui/: badge.tsx  button.tsx  card.tsx  confirm-dialog.tsx  dialog.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  switch.tsx  table.tsx  tabs.tsx
skylarkdb/src/hooks/: useMySQLExplorer.ts  useSettings.ts  useSettings.tsx
skylarkdb/src/stores/: connectionStore.ts  queryStore.ts  sidebarStore.ts
skylarkdb/src/types/: api.ts  index.ts
skylarkdb/src/utils/: api.ts  apiWrapper.ts  batchOperations.ts  connectionOptimizer.ts  connectionPool.ts  errorHandler.ts  hostPlatform.ts  mysqlTable.ts  performance.ts  sqlPlaceholders.ts  syncNativeWindowTheme.ts  tableOptimizer.tsx  withPerformanceOptimization.tsx
