[package]
name = "skylarkdb"
version = "0.1.0"
description = "A modern database management tool for MySQL and Redis"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "mysql"] }
redis = { version = "0.24", features = ["tokio-comp", "tokio-native-tls-comp", "aio"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
once_cell = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
